Closed Bug 1743291 Opened 3 years ago Closed 5 months ago

Intermittent Assertion failure: aVideoFrame.timestamp_us() > mLastFrameConverted->mFrame.timestamp_us(), at /builds/worker/checkouts/gecko/dom/media/VideoFrameConverter.h:209

Categories

(Core :: Audio/Video, defect, P5)

defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox-esr128 --- wontfix
firefox131 --- wontfix
firefox132 --- wontfix
firefox133 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: pehrsons)

References

(Depends on 1 open bug)

Details

(Keywords: assertion, intermittent-failure)

Crash Data

Attachments

(1 file)

Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=359478778&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/OhTLsNEaQNORIpkDrni3rQ/runs/0/artifacts/public/logs/live_backing.log


[task 2021-11-28T12:30:10.714Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: WebrtcWorker #1]: I/signaling [WebrtcWorker #1|WebrtcVideoSessionConduit] VideoStreamFactory.cpp:204: CreateEncoderStreams Input frame 320x240, RID  scaling to 320x240
[task 2021-11-28T12:30:10.715Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport NrIceCtx(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc)/STREAM(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0) : parsing trickle candidate candidate:0 1 UDP 2122187007 172.17.0.4 45158 typ host
[task 2021-11-28T12:30:10.717Z] 12:30:10     INFO - GECKO(4015) | (ice/ERR) ICE(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc): peer (PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc:default), stream(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0 - ba5d4db7:f26103df35a74b20dcc5ec883cdaf7a9) tried to trickle ICE in inappropriate state 4
[task 2021-11-28T12:30:10.718Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport Trickle candidate is redundant for stream 'PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0' because it is completed: candidate:0 1 UDP 2122187007 172.17.0.4 45158 typ host
[task 2021-11-28T12:30:10.722Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport NrIceCtx(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc)/STREAM(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0) : parsing trickle candidate candidate:1 1 UDP 2122252543 fd15:4ba5:5a2b:100a:0:242:ac11:4 47840 typ host
[task 2021-11-28T12:30:10.723Z] 12:30:10     INFO - GECKO(4015) | (ice/ERR) ICE(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc): peer (PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc:default), stream(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0 - ba5d4db7:f26103df35a74b20dcc5ec883cdaf7a9) tried to trickle ICE in inappropriate state 4
[task 2021-11-28T12:30:10.728Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport Trickle candidate is redundant for stream 'PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0' because it is completed: candidate:1 1 UDP 2122252543 fd15:4ba5:5a2b:100a:0:242:ac11:4 47840 typ host
[task 2021-11-28T12:30:10.776Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport NrIceCtx(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc)/STREAM(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0) : parsing trickle candidate candidate:2 1 TCP 2105458943 172.17.0.4 9 typ host tcptype active
[task 2021-11-28T12:30:10.781Z] 12:30:10     INFO - GECKO(4015) | (ice/ERR) ICE(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc): peer (PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc:default), stream(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0 - ba5d4db7:f26103df35a74b20dcc5ec883cdaf7a9) tried to trickle ICE in inappropriate state 4
[task 2021-11-28T12:30:10.782Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport Trickle candidate is redundant for stream 'PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0' because it is completed: candidate:2 1 TCP 2105458943 172.17.0.4 9 typ host tcptype active
[task 2021-11-28T12:30:10.801Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport NrIceCtx(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc)/STREAM(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0) : parsing trickle candidate candidate:3 1 TCP 2105524479 fd15:4ba5:5a2b:100a:0:242:ac11:4 9 typ host tcptype active
[task 2021-11-28T12:30:10.805Z] 12:30:10     INFO - GECKO(4015) | (ice/ERR) ICE(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc): peer (PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc:default), stream(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0 - ba5d4db7:f26103df35a74b20dcc5ec883cdaf7a9) tried to trickle ICE in inappropriate state 4
[task 2021-11-28T12:30:10.812Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport Trickle candidate is redundant for stream 'PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0' because it is completed: candidate:3 1 TCP 2105524479 fd15:4ba5:5a2b:100a:0:242:ac11:4 9 typ host tcptype active
[task 2021-11-28T12:30:10.819Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport NrIceCtx(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc)/STREAM(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0) : parsing trickle candidate
[task 2021-11-28T12:30:10.826Z] 12:30:10     INFO - GECKO(4015) | (ice/ERR) ICE(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc): peer (PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc:default), stream(PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0 - ba5d4db7:f26103df35a74b20dcc5ec883cdaf7a9) tried to trickle ICE in inappropriate state 4
[task 2021-11-28T12:30:10.827Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Socket Thread]: D/mtransport Trickle candidate is redundant for stream 'PC:{a7b1cb85-d22a-4836-b7c9-a73f37a3ca35} 1638102609464978 (id=6442451232 url=https://example.com/tests/dom/media/webrtc/tests/moc transport-id=transport_0' because it is completed:
[task 2021-11-28T12:30:10.982Z] 12:30:10     INFO - GECKO(4015) | [Child 4125: Main Thread]: E/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2915: GetStats: Found no pipelines matching selector.
[task 2021-11-28T12:30:11.306Z] 12:30:11     INFO - GECKO(4015) | Assertion failure: aVideoFrame.timestamp_us() > mLastFrameConverted->mFrame.timestamp_us(), at /builds/worker/checkouts/gecko/dom/media/VideoFrameConverter.h:209
[task 2021-11-28T12:30:11.321Z] 12:30:11     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2021-11-28T12:30:19.957Z] 12:30:19     INFO - GECKO(4015) | #01: mozilla::VideoFrameConverter::VideoFrameConverted(webrtc::VideoFrame, int) [dom/media/VideoFrameConverter.h:207]
[task 2021-11-28T12:30:19.966Z] 12:30:19     INFO - GECKO(4015) | #02: mozilla::VideoFrameConverter::ProcessVideoFrame(mozilla::VideoFrameConverter::FrameToProcess const&) [dom/media/VideoFrameConverter.h:396]
[task 2021-11-28T12:30:19.966Z] 12:30:19     INFO - GECKO(4015) | #03: mozilla::detail::RunnableMethodImpl<mozilla::VideoFrameConverter*, void (mozilla::VideoFrameConverter::*)(mozilla::VideoFrameConverter const::FrameToProcess&), true, (mozilla::RunnableKind)0, StoreCopyPassByLRef<mozilla::VideoFrameConverter::FrameToProcess> >::Run() [xpcom/threads/nsThreadUtils.h:1203]
[task 2021-11-28T12:30:19.967Z] 12:30:19     INFO - GECKO(4015) | #04: mozilla::TaskQueue::Runner::Run() [xpcom/threads/TaskQueue.cpp:215]
[task 2021-11-28T12:30:19.967Z] 12:30:19     INFO - GECKO(4015) | #05: nsThreadPool::Run() [xpcom/threads/nsThreadPool.cpp:307]
[task 2021-11-28T12:30:19.967Z] 12:30:19     INFO - GECKO(4015) | #06: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1178]
[task 2021-11-28T12:30:19.967Z] 12:30:19     INFO - GECKO(4015) | #07: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:467]
[task 2021-11-28T12:30:19.968Z] 12:30:19     INFO - GECKO(4015) | #08: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:301]
[task 2021-11-28T12:30:19.968Z] 12:30:19     INFO - GECKO(4015) | #09: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:331]
[task 2021-11-28T12:30:19.968Z] 12:30:19     INFO - GECKO(4015) | #10: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:307]
[task 2021-11-28T12:30:19.969Z] 12:30:19     INFO - GECKO(4015) | #11: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:393]
[task 2021-11-28T12:30:19.974Z] 12:30:19     INFO - GECKO(4015) | #12: _pt_root [nsprpub/pr/src/pthreads/ptthread.c:204]
[task 2021-11-28T12:30:19.975Z] 12:30:19     INFO - GECKO(4015) | #13: ??? [/lib/x86_64-linux-gnu/libpthread.so.0 + 0x76db]
[task 2021-11-28T12:30:19.982Z] 12:30:19     INFO - GECKO(4015) | #14: clone [/lib/x86_64-linux-gnu/libc.so.6 + 0x121a3f]
[task 2021-11-28T12:30:19.983Z] 12:30:19     INFO - GECKO(4015) | #15: ??? (???:???)
Summary: Intermittent [Tier 2] Assertion failure: aVideoFrame.timestamp_us() > mLastFrameConverted->mFrame.timestamp_us(), at /builds/worker/checkouts/gecko/dom/media/VideoFrameConverter.h:209 → Intermittent Assertion failure: aVideoFrame.timestamp_us() > mLastFrameConverted->mFrame.timestamp_us(), at /builds/worker/checkouts/gecko/dom/media/VideoFrameConverter.h:209
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 3 years ago2 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 2 years ago11 months ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Status: REOPENED → RESOLVED
Closed: 11 months ago7 months ago
Resolution: --- → INCOMPLETE
Status: RESOLVED → REOPENED
Resolution: INCOMPLETE → ---
Duplicate of this bug: 1816360
Duplicate of this bug: 1746772
Duplicate of this bug: 1742069

Copying crash signatures from duplicate bugs.

Crash Signature: [@ mozilla::VideoFrameConverter::VideoFrameConverted]

Copying crash signatures from duplicate bugs.

Crash Signature: [@ mozilla::VideoFrameConverter::VideoFrameConverted] → [@ mozilla::VideoFrameConverter::VideoFrameConverted] [@ mozilla::VideoFrameConverter::ProcessVideoFrame]
Assignee: nobody → apehrson
Depends on: 1925039
No longer depends on: 1925039
Depends on: 1925062
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/704bc81b51eb Don't let time go backwards when activating or enabling VideoFrameConverter. r=webrtc-reviewers,ng
Status: REOPENED → RESOLVED
Closed: 7 months ago5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Crash Signature: [@ mozilla::VideoFrameConverter::VideoFrameConverted] [@ mozilla::VideoFrameConverter::ProcessVideoFrame] → [@ mozilla::VideoFrameConverter::VideoFrameConverted] [@ mozilla::VideoFrameConverter::ProcessVideoFrame]
See Also: → 1925899
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: