Bug 1743291 - Don't let time go backwards when activating or enabling VideoFrameConverter. r=webrtc-reviewers,ng

Differential Revision: https://phabricator.services.mozilla.com/D224707